--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@rdfjs/types": "^2.0.1",
-    "global": "^4.4.0",
+    "rdf-data-factory": "^2.0.2",
     "rdf-isomorphic": "^2.0.1",
-    "sparqlalgebrajs": "^5.0.0",
-    "typescript": "^5.7.3"
-  },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+    "rdf-js": "^4.0.2",
+    "sparqlalgebrajs": "^5.0.0"
+  }
 }
