--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,37 @@
 {
   "compilerOptions": {
+    // Environment setup & latest features
     "lib": ["ESNext"],
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
+    "jsx": "react-jsx",
     "allowJs": true,
 
+    // Bundler mode
     "moduleResolution": "bundler",
     "verbatimModuleSyntax": true,
-    "noEmit": false,
-    "outDir": "build",
-    "esModuleInterop": true,
 
+    // Best practices
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+
+    // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  }
+    "noPropertyAccessFromIndexSignature": false,
+
+    // Emit files
+    "outDir": "dist",            // Output folder
+    "declaration": true,         // Generate .d.ts files
+    "declarationMap": true,      // Generate declaration maps
+    "sourceMap": true,           // Generate .map files
+    "esModuleInterop": true,
+
+    // Disable noEmit to allow file output
+    "noEmit": false
+  },
+  "include": ["lib"]
 }
