--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   ],
   "devDependencies": {
     "@rdfjs/types": "^2.0.1",
+    "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
